[profile.debug]
incremental = true 
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
#panic = 'unwind'

# [profile.release]
# debug = true

[workspace]
members = [
  "components/builder-api",
  "components/builder-api-audit",
  "components/builder-apimachinery",
  "components/builder-api-client",
  "components/builder-db",
  "components/builder-deployment",
  "components/builder-scaling",
  "components/builder-authorize",
  "components/builder-session",
  "components/builder-audit",
  "components/builder-securer",
  "components/builder-network",
  "components/builder-storage",
  "components/builder-marketplace",
  "components/common",
  "components/core",
  "components/http-client",
  "components/net",
  "components/rioos",
  "components/builder-api-marketplace",
  "components/telemetry",
]
