[profile.debug]
incremental = true 
codegen-units = 32

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[workspace]
members = [
  "components/builder-api",
  "components/builder-api-audit",
  "components/builder-apimachinery",
  "components/builder-api-client",
  "components/builder-db",
  "components/builder-http-gateway",
  "components/builder-deployment",
  "components/builder-scaling",
  "components/builder-authorize",
  "components/builder-session",
  "components/builder-audit",
  "components/builder-securer",
  "components/builder-network",
  "components/builder-storage",
  "components/builder-marketplace",
  "components/builder-devtooling",
  "components/common",
  "components/core",
  "components/http-client",
  "components/http2",
  "components/entitlement",
  "components/rioos",
  "components/ws-rs",
  "components/builder-api-marketplace",
  "components/telemetry",
]
