[package]
name = "rioos_auth"
version = "0.0.0"
authors = ["Rajthilak Rajamani <rajthilak.rajamani@rio.company>","Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO/OS authentication library"
workspace = "../../"

[dependencies]
lazy_static="*"
regex ="*"
rust-crypto = "*"
serde = "1.0.43"
serde_derive = "*"
serde_json = "1.0.16"
rand = "*" # Or a newer version
iron = "0.6.0"
openssl = "^0.9"
base64 = "*"

rioos_builder_apimachinery = { path = "../builder-apimachinery" }

[dependencies.rioos_builder_db]
path = "../builder-db"

[dependencies.rioos_builder_services]
path = "../builder-securer"

[dependencies.rioos_builder_session]
path = "../builder-session"

[dependencies.rioos_common]
path = "../common"

[dependencies.rioos_builder_authorizer]
path = "../builder-authorize"

[features]
functional = []
