[package]
name = "rioos_auth"
version = "0.0.0"
authors = ["Rajthilak Rajamani <rajthilak.rajamani@rio.company>","Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO/OS authentication library"
workspace = "../../"

[dependencies]
lazy_static="1.0.1"
regex = "1.0.1"
rust-crypto = "*"
serde = "1.0.66"
serde_derive = "1.0.67"
serde_json = "1.0.22"
rand = "0.5.3" 
iron = "0.6.0"
openssl = "0.9.24"
base64 = "0.9.2"
log = "0.4.2"

rioos_builder_apimachinery = { path = "../builder-apimachinery" }

[dependencies.rioos_builder_db]
path = "../builder-db"

[dependencies.rioos_builder_services]
path = "../builder-securer"

[dependencies.rioos_builder_session]
path = "../builder-session"

[dependencies.rioos_common]
path = "../common"

[dependencies.rioos_builder_authorizer]
path = "../builder-authorize"

[dependencies.rioos_builder_entitlement]
path = "../builder-entitlement"

[features]
functional = []
