[package]
name = "habitat_builder_admin"
version = "0.0.0"
authors = ["Vinothini V <vino.v@megam.io>", "Kishorekumar Neelamegam <nkishore@megam.io>"]
description = "RIO/OS Admin Gateway"
build = "../bldr-build.rs"
workspace = "../../"

[[bin]]
name = "bldr-admin"
doc = false

[dependencies]
bodyparser = "*"
env_logger = "*"
hyper = "*"
iron = "*"
log = "*"
mount = "*"
persistent = "*"
protobuf = "*"
router = "*"
serde = "1.0.2"
serde_derive = "*"
serde_json = "*"
staticfile = "*"
toml = { version = "0.4.5", features = ["serde"], default-features = false }
unicase = "*"
# JW TODO: Switch back to crates version once an updated version is published to crates.io
# which leverages the latest version of bodyparser
urlencoded = { version = "*", git = "https://github.com/iron/urlencoded" }

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"

[dependencies.rioos_core]
path = "../core"

[dependencies.rioos_builder_protocol]
path = "../builder-protocol"

[dependencies.rioos_net]
path = "../net"
