[package]
name = "rioos_aran_blockchain"
version = "0.0.0"
authors = ["Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO/OS Audits Blockchain Gateway"
build = "../build-builder.rs"
workspace = "../../"

[[bin]]
name = "rioos-blockchain-server"
path = "src/main.rs"
doc = false

[dependencies]
ansi_term = "*"
log = "0.4.1"
lazy_static = "*"
exonum = "0.5.1"
mount = "0.4.0"
params = "0.8"
iron = "0.6.0"
bodyparser = "0.8.0"
router = "0.6.0"
hyper-native-tls = "0.2.4"
serde = "1.0.43"
serde_derive = "*"
serde_json = "1.0.16"
toml = { version = "0.4.5", default-features = false }

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.rioos_core]
path = "../core"

[dependencies.rioos_common]
path = "../common"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_net]
path = "../net"


[dev-dependencies]
exonum-testkit = "0.5.0"
