[package]
name = "rioos_aran_blockchain"
version = "0.0.0"
authors = ["Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO/OS Audits Blockchain Gateway"
build = "../build-builder.rs"
workspace = "../../"

[[bin]]
name = "rioos-blockchain-server"
path = "src/main.rs"
doc = false

[dependencies]
log = "0.4.2"
lazy_static = "1.0.1"
exonum = "0.5.1"
iron = "0.6.0"
bodyparser = "0.8.0"
router = "0.6.0"
serde = "1.0.66"
serde_derive = "1.0.67"
serde_json = "1.0.22"
toml = { version = "0.4.6", default-features = false }

[dependencies.clap]
version = "2.32.0"
features = [ "suggestions", "color", "unstable" ]

[dependencies.rioos_core]
path = "../core"

[dependencies.rioos_common]
path = "../common"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"


[dev-dependencies]
exonum-testkit = "0.5.0"
