[package]
name = "rioos_api_client"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "Rust SDK Client for Rio/OS"
workspace = "../../"

[dependencies]
clippy = {version = "*", optional = true}
rioos_builder_apimachinery = { path = "../builder-apimachinery" }
reqwest = "0.8.5"
hyper = "0.11.21"
serde_json = "1.0.10"
url = "1.6.0"

[dependencies.rioos_http_client]
path = "../http-client"

[dependencies.rioos_net]
path = "../net"
