[package]
name = "rioos_api_client"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "Rust SDK Client for Rio/OS"
workspace = "../../"

[dependencies]
clippy = {version = "*", optional = true}
rioos_builder_apimachinery = { path = "../builder-apimachinery" }
reqwest = "0.8.6"
hyper = "0.11.27"
serde_json = "1.0.22"
url = "1.7.0"

[dependencies.rioos_builder_httpgateway]
path = "../builder-http-gateway"

[dependencies.rioos_http_client]
path = "../http-client"
