[package]
name = "rioos_marketplace_api"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO.Marketplace Headless - API Gateway"
build = "../build-builder.rs"
workspace = "../../"

[[bin]]
name = "rioos-marketplaces"
path = "src/main.rs"
doc = false

[dependencies]
regex="*"
rand = "*"
ansi_term = "*"
env_logger = "0.5.9"
bodyparser = "0.8.0"
router = "0.6.0"
persistent = "*"
iron = "0.6.0"
mount = "*"
lazy_static = "*"
serde = "1.0.43"
serde_derive = "*"
serde_json = "1.0.16"
toml = { version = "0.4.5", default-features = false }
url = "1.7.0"
log = "0.4.1"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.rioos_core]
path = "../core"

[dependencies.rioos_common]
path = "../common"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_builder_httpgateway]
path = "../builder-http-gateway"

[dependencies.rioos_builder_marketplacesrv]
path = "../builder-marketplace"

[dependencies.rioos_builder_session]
path = "../builder-session"

[dependencies.rioos_builder_db]
path = "../builder-db"

[dependencies.rioos_auth]
path = "../auth"

[features]
functional = []
