[package]
name = "rioos_aran_api"
version = "0.0.0"
authors = ["Rajthilak Rajamani <rajthilak.rajamani@rio.company>","Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>", "Suganya Kaliyamoorthy <suganya.kaliyamoorthy@rio.company>", "Rathish V <rathishvbr@megam.io>"]
description = "RIO/OS API Gateway"
build = "../build-builder.rs"
workspace = "../../"

[[bin]]
name = "rioos-apiserver"
path = "src/main.rs"
doc = false

[dependencies]
base64 = "*"
regex = "*"
rand = "*"
ansi_term = "*"
env_logger = "0.5.9"
log = "0.4.1"
bodyparser = "0.8.0"
params = "0.8"
router = "0.6.0"
persistent = "*"
iron = "0.6.0"
mount = "0.4.0"
reqwest = "0.8.5"
lazy_static = "*"
serde = "1.0.43"
serde_derive = "*"
serde_json = "1.0.16"
serde_yaml = "0.7.3"
hyper = "0.11"
chrono = { version = "0.4.2", features = ["serde"] }

tls-api-openssl = "0.*"
tls-api = "0.1.12"


typemap = "*"
url = "1.7.0"
urlencoded = "0.6.0"
futures = "0.1.21"
tokio-core = "0.1.17"
tokio-io = "0.1.6"
tokio-timer = "0.1.2"

bytes = "0.*"
tempdir = "*"
postgres = { version = "0.15.2", features = ["with-chrono"] }
openssl = "0.9"
mio = "0.6.*"
schedule_recv = "0.1.0"

fallible-iterator = "0.1.4"
enum_derive = "0.1.7"
custom_derive = "0.1.7"
handlebars = { version = "1.0.0-beta.1", default-features = false }
lettre = "0.8"
lettre_email="0.8"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.rioos_core]
path = "../core"

[dependencies.rioos_common]
path = "../common"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_builder_httpgateway]
path = "../builder-http-gateway"

[dependencies.rioos_http2]
path = "../http2"

[dependencies.rioos_ws]
path = "../ws-rs"

[dependencies.rioos_builder_asmsrv]
path = "../builder-deployment"

[dependencies.rioos_builder_scalesrv]
path = "../builder-scaling"

[dependencies.rioos_builder_authsrv]
path = "../builder-authorize"

[dependencies.rioos_builder_nodesrv]
path = "../builder-node"

[dependencies.rioos_builder_session]
path = "../builder-session"

[dependencies.rioos_builder_servicesrv]
path = "../builder-securer"

[dependencies.rioos_builder_netsrv]
path = "../builder-network"

[dependencies.rioos_builder_storagesrv]
path = "../builder-storage"

[dependencies.rioos_builder_db]
path = "../builder-db"

[dependencies.rioos_builder_jobsrv]
path = "../builder-job"

[dependencies.rioos_builder_audit]
path = "../builder-audit"

[dependencies.rioos_builder_devtooling]
path = "../builder-devtooling"

[dependencies.rioos_http_client]
path = "../http-client"

[dependencies.rioos_entitlement]
path = "../entitlement"

[dependencies.rioos_auth]
path = "../auth"

[dependencies.rioos_telemetry]
path = "../telemetry"

[dependencies.rioos_builder_diagnostics]
path = "../builder-diagnostics"

[features]
functional = []
