[package]
name = "rioos_builder_apimachinery"
version = "0.0.0"
authors = ["Rajthilak Rajamani <rajthilak.rajamani@rio.company>", "Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>", "Suganya K <suganyakaliyamoorthy@rio.company>"]
description = "RIO/OS Aran Server Communication Datastructure types"
workspace = "../../"

[dependencies]
log = "0.4.1"
chrono = { version = "0.4.2", features = ["serde"] }
serde = "1.0.43"
serde_json = "1.0.16"
serde_derive = "*"
time = "*"
linked-hash-map="0.5.1"
###  Used by schema.rs
iron = "0.6.0"
lazy_static = "*"
woothee = "*"
chrono-humanize = "0.0.11"

[features]
functional = []
protocols = []
