[package]
name = "rioos_builder_apimachinery"
version = "0.0.0"
authors = ["Rajthilak Rajamani <rajthilak.rajamani@rio.company>", "Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>", "Suganya K <suganyakaliyamoorthy@rio.company>", "Rathish V <rathishvbr@megam.io>"]
description = "RIO/OS Aran Server Communication Datastructure types"
workspace = "../../"

[dependencies]
log = "0.4.2"
chrono = { version = "0.4.6", features = ["serde"] }
serde = "1.0.79"
serde_json = "1.0.27"
serde_derive = "1.0.79"
time = "*"
linked-hash-map="0.5.1"
###  Used by schema.rs
iron = "0.6.0"
lazy_static = "1.1.0"
woothee = "*"
chrono-humanize = "0.0.11"

[features]
functional = []
protocols = []
