[package]
name = "rio_appstore_storage"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO App Store Library"
workspace = "../../"

[dependencies]

postgres = { version = "0.15.2", features = ["with-chrono"] }
chrono = { version = "0.4.4", features = ["serde"] }
rand = "0.5.3"
serde_json = "1.0.22"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_builder_db]
path = "../builder-db"

[features]
functional = []
