[package]
name = "rioos_builder_audit"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>"]
description = "RIO/OS Audit API"
workspace = "../../"

[dependencies]
influx_db_client = "0.3.1"
serde_json = "1.0.10"

[dependencies.rioos_net]
path = "../net"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[features]
functional = []
