[package]
name = "rioos_builder_audit"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>"]
description = "RIO/OS Audit API"
workspace = "../../"

[dependencies]
influx_db_client = "0.3.3"
serde_json = "1.0.27"
serde = "1.0.79"
serde_derive = "1.0.79"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_http_client]
path = "../http-client"

[features]
functional = []
