[package]
name = "rioos_builder_authsrv"
version = "0.0.0"
authors = ["Rajthilak Rajamani <rajthilak.rajamani@rio.company>","Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO/OS Identity and Access library"
workspace = "../../"

[dependencies]

postgres = { version = "0.15.1", features = ["with-chrono"] }
chrono = { version = "0.4.0", features = ["serde"] }
serde = "1.0.27"
serde_json = "1.0.10"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_builder_db]
path = "../builder-db"

[features]
functional = []
