[package]
name = "builder_core"
version = "0.0.0"
authors = ["Vinothini V <vino.v@megam.io>", "Kishorekumar Neelamegam <nkishore@megam.io>"]
workspace = "../../"
build = "../bldr-build.rs"

[dependencies]
log = "*"
statsd = "*"
petgraph = "*"
protobuf = "*"
walkdir = "*"
libarchive = "*"
time = "*"
chrono = { version = "*", features = ["serde"] }

[dependencies.habitat_core]
path = "../core"

[dependencies.habitat_builder_protocol]
path = "../builder-protocol"

[features]
functional = []
