[package]
name = "builder_core"
version = "0.0.0"
authors = ["Vinothini V <vino.v@megam.io>", "Kishorekumar Neelamegam <nkishore@megam.io>"]
workspace = "../../"

[dependencies]
log = "*"
statsd = "*"
petgraph = "*"
walkdir = "*"
time = "*"
chrono = { version = "0.3.0", features = ["serde"] }

[dependencies.rioos_core]
path = "../core"


[features]
functional = []
