[package]
name = "rioos_builder_db"
version = "0.0.0"
authors = ["Rajthilak Rajamani <rajthilak.rajamani@rio.company>", "Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>", "Suganya K <suganyakaliyamoorthy@megam.io>"]
description = "RIO/OS Aran Database Library"
workspace = "../../"

[dependencies]
time = "*"
rand = "*"
log = "0.4.1"
num_cpus = "*"
fnv = "*"
diesel = { version = "*", features = ["postgres"] }
diesel_migrations = "*"

postgres = { version = "0.15.2", features = ["with-chrono","with-serde_json","with-openssl"] }
postgres-shared = "0.4.0"
r2d2-diesel = "*"
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
serde = "1.0.27"
serde_derive = "*"
serde_json = "1.0.10"
serde_yaml = "0.7"
fallible-iterator = "*"
threadpool = "1.6.0"
base64 = "*"
lazy_static = "*"
chrono = { version = "0.4.0", features = ["serde"] }
url = "*"


[dependencies.rioos_core]
path = "../core"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_common]
path = "../common"

[features]
functional = []
