[package]
name = "rioos_builder_db"
version = "0.0.0"
authors = ["Rajthilak Rajamani <rajthilak.rajamani@rio.company>", "Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>", "Suganya K <suganyakaliyamoorthy@megam.io>", "Rathish V <rathishvbr@megam.io>"]
description = "RIO/OS Aran Database Library"
workspace = "../../"

[dependencies]
chrono = { version = "0.4.2", features = ["serde"] }

log = "0.4.1"
fnv = "*"
diesel = { version = "*", features = ["postgres"] }
diesel_migrations = "*"
rand = "*"

postgres = { version = "0.15.2", features = ["with-chrono","with-serde_json","with-openssl"] }
r2d2-diesel = "*"
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
serde = "1.0.43"
serde_derive = "*"
serde_json = "1.0.16"
serde_yaml = "0.7.3"
num_cpus = "*"
base64 = "*"
lazy_static = "*"
url = "*"


[dependencies.rioos_core]
path = "../core"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[features]
functional = []
