[package]
name = "rioos_builder_deployment"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>", "Suganya K <suganyakaliyamoorthy@megam.io>", "Rathish V <rathishvbr@megam.io>"]
description = "RIO/OS Deployment library"
workspace = "../../"

[dependencies]
rand = "0.5.3"
postgres = { version = "0.15.2", features = ["with-chrono", "with-serde_json"] }
chrono = { version = "0.4.6", features = ["serde"] }
petgraph = "*"
human-size = "*"
serde_json = "1.0.27"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_builder_db]
path = "../builder-db"

[dependencies.rioos_telemetry]
path = "../telemetry"

[dependencies.rioos_builder_jobsbuilder]
path = "../builder-job"

[features]
functional = []
