[package]
name = "rioos_builder_devtooling"
version = "0.0.0"
authors = ["Suganya K <suganya.kaliyamoorthy@rio.company>"]
description = "RIO/OS Devtooling library"
workspace = "../../"

[dependencies]
postgres = { version = "0.15.2", features = ["with-chrono"] }
chrono = { version = "0.4.2", features = ["serde"] }
serde_json = "1.0.16"


[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_builder_db]
path = "../builder-db"


[features]
functional = []
