[package]
name = "rioos_builder_diagnostics"
version = "0.0.0"
authors = ["Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>"]
description = "RIO/OS Diagnostics library"
workspace = "../../"

[dependencies]
log = "0.4.2"
postgres = { version = "0.15.1", features = ["with-serde_json"] }
serde_json = "1.0.22"
serde = "1.0.66"
serde_derive = "1.0.67"

[dependencies.rioos_builder_db]
path = "../builder-db"

[dependencies.rioos_http_client]
path = "../http-client"

[dependencies.rioos_telemetry]
path = "../telemetry"

[dependencies.rioos_builder_health_nodes]
path = "../builder-node"

[features]
functional = []
