[package]
name = "rioos_builder_entitlement"
version = "0.0.0"
authors = ["Rajthilak Rajamani <rajthilak.rajamani@rio.company>","Vinothini Veerasundaram <vino.veerasundaram@rio.company>", "Kishorekumar Neelamegam <kishore.neelamegam@rio.company>", "Suganya Kaliyamoorthy <suganya.kaliyamoorthy@rio.company>"]
description = "RIO/OS Authorization library"
workspace = "../../"

[dependencies]
log = "0.4.1"
postgres = { version = "0.15.2", features = ["with-chrono"] }
chrono = { version = "0.4.2", features = ["serde"] }
serde = "1.0.43"
serde_json = "1.0.16"

[dependencies.rioos_builder_apimachinery]
path = "../builder-apimachinery"

[dependencies.rioos_builder_db]
path = "../builder-db"

[features]
functional = []
